--- a/TDSE-PHYS299/pinn-tdse-w1-s1.ipynb
+++ b/TDSE-PHYS299/pinn-tdse-w1-s1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "798f7f11",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,16 @@
     "w_choice = tf.constant(1.0, dtype=DTYPE)\n",
     "pi = tf.constant(np.pi, dtype=DTYPE)\n",
     "x_min, x_max = -pi, pi\n",
-    "t_min, t_max = tf.constant(0.0, dtype=DTYPE), pi/2.0\n",
+    "t_min, t_max = tf.constant(0.0, dtype=DTYPE), pi/4.0\n",
+    "\n",
+    "# generate grid points\n",
+    "def generate_grid_samples(x_min, x_max, t_min, t_max, N_x, N_t):\n",
+    "    x = tf.linspace(x_min, x_max, N_x)\n",
+    "    t = tf.linspace(t_min, t_max, N_t)\n",
+    "    X, T = tf.meshgrid(x, t)\n",
+    "    x_flat = tf.reshape(X, [-1, 1])\n",
+    "    t_flat = tf.reshape(T, [-1, 1])\n",
+    "    return x_flat, t_flat\n",
     "\n",
     "# scale inputs\n",
     "@tf.function\n",
@@ -44,11 +53,11 @@
     "    return (1.0/np.sqrt(2.0)) * (u_0 + u_1)\n",
     "\n",
     "# data generation\n",
-    "N_f, N_b, N_i, N_grid = 5000, 1000, 1000, 200\n",
+    "N_f, N_b, N_i, N_grid = 100, 20, 25, 200\n",
     "\n",
     "# interior points\n",
-    "x_f = tf.random.uniform((N_f, 1), x_min, x_max, dtype=DTYPE)\n",
-    "t_f = tf.random.uniform((N_f, 1), t_min, t_max, dtype=DTYPE)\n",
+    "x_f = tf.linspace((N_f, 1), x_min, x_max, dtype=DTYPE)\n",
+    "t_f = tf.linspace((N_f, 1), t_min, t_max, dtype=DTYPE)\n",
     "x_fs = scale_inputs(x_f, x_min, x_max)  # scaled\n",
     "t_fs = scale_inputs(t_f, t_min, t_max)  # scaled\n",
     "\n",
