--- a/TDSE-PHYS299/pinn-tdse-w1-s1.ipynb
+++ b/TDSE-PHYS299/pinn-tdse-w1-s1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "798f7f11",
    "metadata": {},
    "outputs": [],
@@ -53,23 +53,22 @@
     "    return (1.0/np.sqrt(2.0)) * (u_0 + u_1)\n",
     "\n",
     "# data generation\n",
-    "N_f, N_b, N_i, N_grid = 100, 20, 25, 200\n",
+    "N_xt, N_b, N_i, N_grid = 60, 400, 625, 200\n",
     "\n",
     "# interior points\n",
-    "x_f = tf.linspace((N_f, 1), x_min, x_max, dtype=DTYPE)\n",
-    "t_f = tf.linspace((N_f, 1), t_min, t_max, dtype=DTYPE)\n",
+    "x_f, t_f = generate_grid_samples(x_min, x_max, t_min, t_max, N_xt, N_xt)\n",
     "x_fs = scale_inputs(x_f, x_min, x_max)  # scaled\n",
     "t_fs = scale_inputs(t_f, t_min, t_max)  # scaled\n",
     "\n",
     "# boundary points\n",
     "x_b = tf.concat([tf.ones((N_b//2, 1), dtype=DTYPE) * x_min,\n",
     "                 tf.ones((N_b//2, 1), dtype=DTYPE) * x_max], axis=0)\n",
-    "t_b = tf.random.uniform((N_b, 1), t_min, t_max, dtype=DTYPE)\n",
+    "t_b = tf.linspace(t_min, t_max, N_b)[:, None]\n",
     "x_bs = scale_inputs(x_b, x_min, x_max)  # scaled\n",
     "t_bs = scale_inputs(t_b, t_min, t_max)  # scaled\n",
     "\n",
     "# initial points\n",
-    "x_i = tf.random.uniform((N_i, 1), x_min, x_max, dtype=DTYPE)\n",
+    "x_i = tf.linspace(x_min, x_max, N_i)[:, None]\n",
     "t_i = tf.zeros_like(x_i, dtype=DTYPE)\n",
     "x_is = scale_inputs(x_i, x_min, x_max)  # scaled\n",
     "t_is = scale_inputs(t_i, t_min, t_max)  # scaled\n",
