--- a/TDSE-PHYS299/pinn-tdse.ipynb
+++ b/TDSE-PHYS299/pinn-tdse.ipynb
@@ -878,7 +878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
